fixed profile spacing issues on mobile devices

--- a/public/css/discover.scss
+++ b/public/css/discover.scss
@@ -33,7 +33,6 @@
     @media (max-width: $break-small) {
       width: 100%;
       min-height: 315px;
-      background-color: #ccc;
       height: auto;
     }
   }
